Parsing/y.output
Terminals unused in grammar

   T_Index
   To


Grammar

    0 $accept: program $end

    1 program: components

    2 components: component
    3           | component components

    4 component: tuple
    5          | task
    6          | function
    7          | coordinator

    8 tuple: Tuple Type_Name ':' element_defs

    9 element_defs: element_def
   10             | element_def element_defs

   11 element_def: names ':' static_type

   12 names: Variable_Name
   13      | Variable_Name ',' names

   14 static_type: scalar_type
   15            | static_array

   16 scalar_type: T_Integer
   17            | T_Real Single
   18            | T_Real Double
   19            | T_Character
   20            | T_Boolean
   21            | T_Epoch
   22            | T_Range
   23            | Type_Name

   24 static_array: T_Array static_dims Of scalar_type

   25 static_dims: '[' Integer ']' static_dims
   26            | '[' Integer ']'

   27 task: task_header task_body

   28 task_header: Task String ':'

   29 task_body: define environment initialize compute partition

   30 define: S_Define ':' definitions

   31 definitions: definition
   32            | definition definitions

   33 definition: names ':' type

   34 type: static_type
   35     | dynamic_type

   36 dynamic_type: list
   37             | dynamic_array

   38 list: T_List Of static_type

   39 dynamic_array: Dimensionality T_Array Of scalar_type format

   40 format: /* empty */
   41       | Format Type_Name

   42 environment: S_Environment ':' linkages

   43 linkages: linkage
   44         | linkage linkages

   45 linkage: names ':' mode

   46 mode: Link
   47     | Create
   48     | Link_or_Create

   49 initialize: /* empty */
   50           | init_header ':' code

   51 init_header: S_Initialize arguments

   52 arguments: /* empty */
   53          | '(' names ')'

   54 compute: S_Compute ':' meta_stages

   55 meta_stages: stage_sequence
   56            | meta_stage
   57            | meta_stage meta_stages

   58 meta_stage: stage_sequence repeat_control

   59 stage_sequence: compute_stage
   60               | compute_stage stage_sequence

   61 compute_stage: stage_header '{' stage_body '}'

   62 stage_header: String '(' Space Space_ID ')' activation_command

   63 activation_command: /* empty */
   64                   | Activate If expr In expr

   65 repeat_control: Repeat ':' From String repeat_loop

   66 stage_body: meta_stages
   67           | code

   68 partition: S_Partition arguments ':' partition_specs

   69 partition_specs: partition_spec
   70                | partition_spec partition_specs

   71 partition_spec: Space Space_ID '<' Dimensionality '>' attributes divides '{' data_dist '}'
   72               | Space Space_ID '<' Unpartitioned '>' '{' names '}'

   73 attributes: /* empty */
   74           | '<' attribute '>' attributes

   75 attribute: Dynamic

   76 divides: /* empty */
   77        | Divides Space Space_ID parent_config

   78 parent_config: Partitions
   79              | Sub_Partitions

   80 data_dist: main_dist sub_dist

   81 main_dist: data_spec
   82          | data_spec main_dist

   83 data_spec: var_list ':' instr_list relativity

   84 var_list: var
   85         | var ',' var_list

   86 var: Variable_Name
   87    | Variable_Name '<' dimensions '>'

   88 dimensions: V_Dimension
   89           | V_Dimension ',' dimensions

   90 instr_list: instr
   91           | instr ',' instr_list

   92 instr: Replicated
   93      | Variable_Name '(' partition_args ')' padding

   94 padding: /* empty */
   95        | Padding '(' partition_args ')'

   96 partition_args: /* empty */
   97               | partition_arg
   98               | partition_arg ',' partition_args

   99 partition_arg: Variable_Name
  100              | Integer

  101 relativity: /* empty */
  102           | ';' Relative_To Space Space_ID

  103 sub_dist: /* empty */
  104         | P_Sub_Partition '<' Dimensionality '>' '<' nature '>' '{' data_sub_dist '}'

  105 nature: Ordered
  106       | Unordered

  107 data_sub_dist: data_sub_spec
  108              | data_sub_spec data_sub_dist

  109 data_sub_spec: var_list ':' ordered_instr_list

  110 ordered_instr_list: ordered_instr
  111                   | ordered_instr ',' ordered_instr_list

  112 ordered_instr: instr order

  113 order: /* empty */
  114      | Ascends
  115      | Descends

  116 repeat_loop: For expr In expr step_expr
  117            | While expr
  118            | Foreach Space Space_ID C_Sub_Partition

  119 step_expr: /* empty */
  120          | Step expr

  121 $@1: /* empty */

  122 code: $@1 stmt_block

  123 stmt_block: stmt
  124           | stmt new_lines
  125           | stmt new_lines stmt_block

  126 new_lines: New_Line
  127          | New_Line new_lines

  128 stmt: parallel_loop
  129     | sequencial_loop
  130     | if_else_block
  131     | expr

  132 sequencial_loop: Do In Sequence '{' stmt_block '}' For expr In expr step_expr

  133 parallel_loop: Do '{' stmt_block '}' For index_ranges
  134              | Do '{' stmt_block '}' While expr

  135 index_ranges: index_range
  136             | index_range ';' index_ranges

  137 index_range: names In Variable_Name restrictions

  138 restrictions: /* empty */
  139             | O_AND expr

  140 if_else_block: If '(' expr ')' '{' stmt_block '}' else_block

  141 else_block: /* empty */
  142           | else
  143           | else_if else_block

  144 else: Else '{' stmt_block '}'

  145 else_if: Else If '(' expr ')' '{' stmt_block '}'

  146 expr: expr '+' expr
  147     | expr '-' expr
  148     | expr '*' expr
  149     | expr '/' expr
  150     | expr '<' expr
  151     | expr '>' expr
  152     | expr '=' expr
  153     | expr '%' expr
  154     | expr O_OR expr
  155     | expr O_AND expr
  156     | expr O_EQ expr
  157     | expr O_NE expr
  158     | '!' expr
  159     | expr O_GTE expr
  160     | expr O_LTE expr
  161     | expr O_LSH expr
  162     | expr O_RSH expr
  163     | field reduction field
  164     | constant
  165     | field
  166     | function_call
  167     | task_call
  168     | create_obj
  169     | expr At '(' epoch ')'
  170     | '(' expr ')'

  171 constant: Integer
  172         | Real
  173         | Boolean
  174         | Character

  175 field: id
  176      | field '.' id
  177      | field '[' array_index ']'

  178 array_index: expr
  179            | expr O_SB_RANGE expr
  180            | O_SB_RANGE

  181 reduction: R_ADD
  182          | R_MULT
  183          | R_MAX
  184          | R_MIN
  185          | R_MAX_ENTRY
  186          | R_MIN_ENTRY

  187 function_call: field '(' args ')'

  188 args: /* empty */
  189     | String
  190     | expr
  191     | expr ',' args

  192 epoch: id
  193      | id '-' Integer

  194 id: Variable_Name
  195   | Dimension_No
  196   | Range
  197   | Local
  198   | Index

  199 coordinator: Program '(' Variable_Name ')' ':' meta_code

  200 $@2: /* empty */

  201 meta_code: $@2 stmt_block

  202 create_obj: New object_type

  203 object_type: static_type '(' args ')'
  204            | dynamic_type

  205 task_call: Execute '(' String ';' id optional_secs ')'

  206 optional_secs: /* empty */
  207              | ';' optional_sec
  208              | ';' optional_sec ';' optional_sec

  209 optional_sec: section ':' args

  210 section: S_Initialize
  211        | S_Partition

  212 function: function_header function_body

  213 function_header: Function Variable_Name ':' in_out

  214 in_out: output
  215       | input output

  216 input: S_Arguments ':' definitions

  217 output: S_Results ':' definitions

  218 function_body: S_Compute ':' code


Terminals, with rules where they appear

$end (0) 0
'!' (33) 158
'%' (37) 153
'(' (40) 53 62 93 95 140 145 169 170 187 199 203 205
')' (41) 53 62 93 95 140 145 169 170 187 199 203 205
'*' (42) 148
'+' (43) 146
',' (44) 13 85 89 91 98 111 191
'-' (45) 147 193
'.' (46) 176
'/' (47) 149
':' (58) 8 11 28 30 33 42 45 50 54 65 68 83 109 199 209 213 216 217
    218
';' (59) 102 136 205 207 208
'<' (60) 71 72 74 87 104 150
'=' (61) 152
'>' (62) 71 72 74 87 104 151
'[' (91) 25 26 177
']' (93) 25 26 177
'{' (123) 61 71 72 104 132 133 134 140 144 145
'}' (125) 61 71 72 104 132 133 134 140 144 145
error (256)
Program (258) 199
Tuple (259) 8
Task (260) 28
Function (261) 213
New (262) 202
Execute (263) 205
S_Define (264) 30
S_Environment (265) 42
S_Initialize (266) 51 210
S_Compute (267) 54 218
S_Partition (268) 68 211
S_Arguments (269) 216
S_Results (270) 217
T_Integer (271) 16
T_Character (272) 19
T_Real (273) 17 18
T_Boolean (274) 20
T_Epoch (275) 21
T_Index (276)
T_Range (277) 22
T_Array (278) 24 39
T_List (279) 38
Dimensionality (280) 39 71 104
Dimension_No (281) 195
Single (282) 17
Double (283) 18
Format (284) 41
Real (285) 172
Integer (286) 25 26 100 171 193
Boolean (287) 173
Character (288) 174
String (289) 28 62 65 189 205
Type_Name (290) 8 23 41
Variable_Name (291) 12 13 86 87 93 99 137 194 199 213
Space (292) 62 71 72 77 102 118
Space_ID (293) 62 71 72 77 102 118
V_Dimension (294) 88 89
Activate (295) 64
For (296) 116 132 133
If (297) 64 140 145
Repeat (298) 65
Else (299) 144 145
From (300) 65
In (301) 64 116 132 137
Step (302) 120
Foreach (303) 118
Range (304) 196
Local (305) 197
Index (306) 198
C_Sub_Partition (307) 118
While (308) 117 134
Do (309) 132 133 134
Sequence (310) 132
To (311)
Of (312) 24 38 39
Link (313) 46
Create (314) 47
Link_or_Create (315) 48
Dynamic (316) 75
P_Sub_Partition (317) 104
Ordered (318) 105
Unordered (319) 106
Replicated (320) 92
Padding (321) 95
Relative_To (322) 102
Divides (323) 77
Sub_Partitions (324) 79
Partitions (325) 78
Unpartitioned (326) 72
Ascends (327) 114
Descends (328) 115
New_Line (329) 126 127
R_MIN_ENTRY (330) 186
R_MAX_ENTRY (331) 185
R_MIN (332) 184
R_MAX (333) 183
R_MULT (334) 182
R_ADD (335) 181
O_OR (336) 154
O_AND (337) 139 155
O_NE (338) 157
O_EQ (339) 156
O_GTE (340) 159
O_LTE (341) 160
O_SB_RANGE (342) 179 180
O_RSH (343) 162
O_LSH (344) 161
At (345) 169
Field (346)


Nonterminals, with rules where they appear

$accept (111)
    on left: 0
program (112)
    on left: 1, on right: 0
components (113)
    on left: 2 3, on right: 1 3
component (114)
    on left: 4 5 6 7, on right: 2 3
tuple (115)
    on left: 8, on right: 4
element_defs (116)
    on left: 9 10, on right: 8 10
element_def (117)
    on left: 11, on right: 9 10
names (118)
    on left: 12 13, on right: 11 13 33 45 53 72 137
static_type (119)
    on left: 14 15, on right: 11 34 38 203
scalar_type (120)
    on left: 16 17 18 19 20 21 22 23, on right: 14 24 39
static_array (121)
    on left: 24, on right: 15
static_dims (122)
    on left: 25 26, on right: 24 25
task (123)
    on left: 27, on right: 5
task_header (124)
    on left: 28, on right: 27
task_body (125)
    on left: 29, on right: 27
define (126)
    on left: 30, on right: 29
definitions (127)
    on left: 31 32, on right: 30 32 216 217
definition (128)
    on left: 33, on right: 31 32
type (129)
    on left: 34 35, on right: 33
dynamic_type (130)
    on left: 36 37, on right: 35 204
list (131)
    on left: 38, on right: 36
dynamic_array (132)
    on left: 39, on right: 37
format (133)
    on left: 40 41, on right: 39
environment (134)
    on left: 42, on right: 29
linkages (135)
    on left: 43 44, on right: 42 44
linkage (136)
    on left: 45, on right: 43 44
mode (137)
    on left: 46 47 48, on right: 45
initialize (138)
    on left: 49 50, on right: 29
init_header (139)
    on left: 51, on right: 50
arguments (140)
    on left: 52 53, on right: 51 68
compute (141)
    on left: 54, on right: 29
meta_stages (142)
    on left: 55 56 57, on right: 54 57 66
meta_stage (143)
    on left: 58, on right: 56 57
stage_sequence (144)
    on left: 59 60, on right: 55 58 60
compute_stage (145)
    on left: 61, on right: 59 60
stage_header (146)
    on left: 62, on right: 61
activation_command (147)
    on left: 63 64, on right: 62
repeat_control (148)
    on left: 65, on right: 58
stage_body (149)
    on left: 66 67, on right: 61
partition (150)
    on left: 68, on right: 29
partition_specs (151)
    on left: 69 70, on right: 68 70
partition_spec (152)
    on left: 71 72, on right: 69 70
attributes (153)
    on left: 73 74, on right: 71 74
attribute (154)
    on left: 75, on right: 74
divides (155)
    on left: 76 77, on right: 71
parent_config (156)
    on left: 78 79, on right: 77
data_dist (157)
    on left: 80, on right: 71
main_dist (158)
    on left: 81 82, on right: 80 82
data_spec (159)
    on left: 83, on right: 81 82
var_list (160)
    on left: 84 85, on right: 83 85 109
var (161)
    on left: 86 87, on right: 84 85
dimensions (162)
    on left: 88 89, on right: 87 89
instr_list (163)
    on left: 90 91, on right: 83 91
instr (164)
    on left: 92 93, on right: 90 91 112
padding (165)
    on left: 94 95, on right: 93
partition_args (166)
    on left: 96 97 98, on right: 93 95 98
partition_arg (167)
    on left: 99 100, on right: 97 98
relativity (168)
    on left: 101 102, on right: 83
sub_dist (169)
    on left: 103 104, on right: 80
nature (170)
    on left: 105 106, on right: 104
data_sub_dist (171)
    on left: 107 108, on right: 104 108
data_sub_spec (172)
    on left: 109, on right: 107 108
ordered_instr_list (173)
    on left: 110 111, on right: 109 111
ordered_instr (174)
    on left: 112, on right: 110 111
order (175)
    on left: 113 114 115, on right: 112
repeat_loop (176)
    on left: 116 117 118, on right: 65
step_expr (177)
    on left: 119 120, on right: 116 132
code (178)
    on left: 122, on right: 50 67 218
$@1 (179)
    on left: 121, on right: 122
stmt_block (180)
    on left: 123 124 125, on right: 122 125 132 133 134 140 144 145
    201
new_lines (181)
    on left: 126 127, on right: 124 125 127
stmt (182)
    on left: 128 129 130 131, on right: 123 124 125
sequencial_loop (183)
    on left: 132, on right: 129
parallel_loop (184)
    on left: 133 134, on right: 128
index_ranges (185)
    on left: 135 136, on right: 133 136
index_range (186)
    on left: 137, on right: 135 136
restrictions (187)
    on left: 138 139, on right: 137
if_else_block (188)
    on left: 140, on right: 130
else_block (189)
    on left: 141 142 143, on right: 140 143
else (190)
    on left: 144, on right: 142
else_if (191)
    on left: 145, on right: 143
expr (192)
    on left: 146 147 148 149 150 151 152 153 154 155 156 157 158 159
    160 161 162 163 164 165 166 167 168 169 170, on right: 64 116 117
    120 131 132 134 139 140 145 146 147 148 149 150 151 152 153 154
    155 156 157 158 159 160 161 162 169 170 178 179 190 191
constant (193)
    on left: 171 172 173 174, on right: 164
field (194)
    on left: 175 176 177, on right: 163 165 176 177 187
array_index (195)
    on left: 178 179 180, on right: 177
reduction (196)
    on left: 181 182 183 184 185 186, on right: 163
function_call (197)
    on left: 187, on right: 166
args (198)
    on left: 188 189 190 191, on right: 187 191 203 209
epoch (199)
    on left: 192 193, on right: 169
id (200)
    on left: 194 195 196 197 198, on right: 175 176 192 193 205
coordinator (201)
    on left: 199, on right: 7
meta_code (202)
    on left: 201, on right: 199
$@2 (203)
    on left: 200, on right: 201
create_obj (204)
    on left: 202, on right: 168
object_type (205)
    on left: 203 204, on right: 202
task_call (206)
    on left: 205, on right: 167
optional_secs (207)
    on left: 206 207 208, on right: 205
optional_sec (208)
    on left: 209, on right: 207 208
section (209)
    on left: 210 211, on right: 209
function (210)
    on left: 212, on right: 6
function_header (211)
    on left: 213, on right: 212
in_out (212)
    on left: 214 215, on right: 213
input (213)
    on left: 216, on right: 215
output (214)
    on left: 217, on right: 214 215
function_body (215)
    on left: 218, on right: 212


state 0

    0 $accept: . program $end

    Program   shift, and go to state 1
    Tuple     shift, and go to state 2
    Task      shift, and go to state 3
    Function  shift, and go to state 4

    program          go to state 5
    components       go to state 6
    component        go to state 7
    tuple            go to state 8
    task             go to state 9
    task_header      go to state 10
    coordinator      go to state 11
    function         go to state 12
    function_header  go to state 13


state 1

  199 coordinator: Program . '(' Variable_Name ')' ':' meta_code

    '('  shift, and go to state 14


state 2

    8 tuple: Tuple . Type_Name ':' element_defs

    Type_Name  shift, and go to state 15


state 3

   28 task_header: Task . String ':'

    String  shift, and go to state 16


state 4

  213 function_header: Function . Variable_Name ':' in_out

    Variable_Name  shift, and go to state 17


state 5

    0 $accept: program . $end

    $end  shift, and go to state 18


state 6

    1 program: components .

    $default  reduce using rule 1 (program)


state 7

    2 components: component .
    3           | component . components

    Program   shift, and go to state 1
    Tuple     shift, and go to state 2
    Task      shift, and go to state 3
    Function  shift, and go to state 4

    $default  reduce using rule 2 (components)

    components       go to state 19
    component        go to state 7
    tuple            go to state 8
    task             go to state 9
    task_header      go to state 10
    coordinator      go to state 11
    function         go to state 12
    function_header  go to state 13


state 8

    4 component: tuple .

    $default  reduce using rule 4 (component)


state 9

    5 component: task .

    $default  reduce using rule 5 (component)


state 10

   27 task: task_header . task_body

    S_Define  shift, and go to state 20

    task_body  go to state 21
    define     go to state 22


state 11

    7 component: coordinator .

    $default  reduce using rule 7 (component)


state 12

    6 component: function .

    $default  reduce using rule 6 (component)


state 13

  212 function: function_header . function_body

    S_Compute  shift, and go to state 23

    function_body  go to state 24


state 14

  199 coordinator: Program '(' . Variable_Name ')' ':' meta_code

    Variable_Name  shift, and go to state 25


state 15

    8 tuple: Tuple Type_Name . ':' element_defs

    ':'  shift, and go to state 26


state 16

   28 task_header: Task String . ':'

    ':'  shift, and go to state 27


state 17

  213 function_header: Function Variable_Name . ':' in_out

    ':'  shift, and go to state 28


state 18

    0 $accept: program $end .

    $default  accept


state 19

    3 components: component components .

    $default  reduce using rule 3 (components)


state 20

   30 define: S_Define . ':' definitions

    ':'  shift, and go to state 29


state 21

   27 task: task_header task_body .

    $default  reduce using rule 27 (task)


state 22

   29 task_body: define . environment initialize compute partition

    S_Environment  shift, and go to state 30

    environment  go to state 31


state 23

  218 function_body: S_Compute . ':' code

    ':'  shift, and go to state 32


state 24

  212 function: function_header function_body .

    $default  reduce using rule 212 (function)


state 25

  199 coordinator: Program '(' Variable_Name . ')' ':' meta_code

    ')'  shift, and go to state 33


state 26

    8 tuple: Tuple Type_Name ':' . element_defs

    Variable_Name  shift, and go to state 34

    element_defs  go to state 35
    element_def   go to state 36
    names         go to state 37


state 27

   28 task_header: Task String ':' .

    $default  reduce using rule 28 (task_header)


state 28

  213 function_header: Function Variable_Name ':' . in_out

    S_Arguments  shift, and go to state 38
    S_Results    shift, and go to state 39

    in_out  go to state 40
    input   go to state 41
    output  go to state 42


state 29

   30 define: S_Define ':' . definitions

    Variable_Name  shift, and go to state 34

    names        go to state 43
    definitions  go to state 44
    definition   go to state 45


state 30

   42 environment: S_Environment . ':' linkages

    ':'  shift, and go to state 46


state 31

   29 task_body: define environment . initialize compute partition

    S_Initialize  shift, and go to state 47

    $default  reduce using rule 49 (initialize)

    initialize   go to state 48
    init_header  go to state 49


state 32

  218 function_body: S_Compute ':' . code

    $default  reduce using rule 121 ($@1)

    code  go to state 50
    $@1   go to state 51


state 33

  199 coordinator: Program '(' Variable_Name ')' . ':' meta_code

    ':'  shift, and go to state 52


state 34

   12 names: Variable_Name .
   13      | Variable_Name . ',' names

    ','  shift, and go to state 53

    $default  reduce using rule 12 (names)


state 35

    8 tuple: Tuple Type_Name ':' element_defs .

    $default  reduce using rule 8 (tuple)


state 36

    9 element_defs: element_def .
   10             | element_def . element_defs

    Variable_Name  shift, and go to state 34

    $default  reduce using rule 9 (element_defs)

    element_defs  go to state 54
    element_def   go to state 36
    names         go to state 37


state 37

   11 element_def: names . ':' static_type

    ':'  shift, and go to state 55


state 38

  216 input: S_Arguments . ':' definitions

    ':'  shift, and go to state 56


state 39

  217 output: S_Results . ':' definitions

    ':'  shift, and go to state 57


state 40

  213 function_header: Function Variable_Name ':' in_out .

    $default  reduce using rule 213 (function_header)


state 41

  215 in_out: input . output

    S_Results  shift, and go to state 39

    output  go to state 58


state 42

  214 in_out: output .

    $default  reduce using rule 214 (in_out)


state 43

   33 definition: names . ':' type

    ':'  shift, and go to state 59


state 44

   30 define: S_Define ':' definitions .

    $default  reduce using rule 30 (define)


state 45

   31 definitions: definition .
   32            | definition . definitions

    Variable_Name  shift, and go to state 34

    $default  reduce using rule 31 (definitions)

    names        go to state 43
    definitions  go to state 60
    definition   go to state 45


state 46

   42 environment: S_Environment ':' . linkages

    Variable_Name  shift, and go to state 34

    names     go to state 61
    linkages  go to state 62
    linkage   go to state 63


state 47

   51 init_header: S_Initialize . arguments

    '('  shift, and go to state 64

    $default  reduce using rule 52 (arguments)

    arguments  go to state 65


state 48

   29 task_body: define environment initialize . compute partition

    S_Compute  shift, and go to state 66

    compute  go to state 67


state 49

   50 initialize: init_header . ':' code

    ':'  shift, and go to state 68


state 50

  218 function_body: S_Compute ':' code .

    $default  reduce using rule 218 (function_body)


state 51

  122 code: $@1 . stmt_block

    New            shift, and go to state 69
    Execute        shift, and go to state 70
    Dimension_No   shift, and go to state 71
    Real           shift, and go to state 72
    Integer        shift, and go to state 73
    Boolean        shift, and go to state 74
    Character      shift, and go to state 75
    Variable_Name  shift, and go to state 76
    If             shift, and go to state 77
    Range          shift, and go to state 78
    Local          shift, and go to state 79
    Index          shift, and go to state 80
    Do             shift, and go to state 81
    '!'            shift, and go to state 82
    '('            shift, and go to state 83

    stmt_block       go to state 84
    stmt             go to state 85
    sequencial_loop  go to state 86
    parallel_loop    go to state 87
    if_else_block    go to state 88
    expr             go to state 89
    constant         go to state 90
    field            go to state 91
    function_call    go to state 92
    id               go to state 93
    create_obj       go to state 94
    task_call        go to state 95


state 52

  199 coordinator: Program '(' Variable_Name ')' ':' . meta_code

    $default  reduce using rule 200 ($@2)

    meta_code  go to state 96
    $@2        go to state 97


state 53

   13 names: Variable_Name ',' . names

    Variable_Name  shift, and go to state 34

    names  go to state 98


state 54

   10 element_defs: element_def element_defs .

    $default  reduce using rule 10 (element_defs)


state 55

   11 element_def: names ':' . static_type

    T_Integer    shift, and go to state 99
    T_Character  shift, and go to state 100
    T_Real       shift, and go to state 101
    T_Boolean    shift, and go to state 102
    T_Epoch      shift, and go to state 103
    T_Range      shift, and go to state 104
    T_Array      shift, and go to state 105
    Type_Name    shift, and go to state 106

    static_type   go to state 107
    scalar_type   go to state 108
    static_array  go to state 109


state 56

  216 input: S_Arguments ':' . definitions

    Variable_Name  shift, and go to state 34

    names        go to state 43
    definitions  go to state 110
    definition   go to state 45


state 57

  217 output: S_Results ':' . definitions

    Variable_Name  shift, and go to state 34

    names        go to state 43
    definitions  go to state 111
    definition   go to state 45


state 58

  215 in_out: input output .

    $default  reduce using rule 215 (in_out)


state 59

   33 definition: names ':' . type

    T_Integer       shift, and go to state 99
    T_Character     shift, and go to state 100
    T_Real          shift, and go to state 101
    T_Boolean       shift, and go to state 102
    T_Epoch         shift, and go to state 103
    T_Range         shift, and go to state 104
    T_Array         shift, and go to state 105
    T_List          shift, and go to state 112
    Dimensionality  shift, and go to state 113
    Type_Name       shift, and go to state 106
